Adjust the z-index to avoid layering issues

--- a/app/javascript/src/styles/common/navigation.scss
+++ b/app/javascript/src/styles/common/navigation.scss
@@ -5,7 +5,7 @@ nav.navigation {
   grid-template-rows: min-content auto min-content min-content;
 
   width: 100%; // otherwise narrow when fixed
-  z-index: 10; // otherwise post labels layered above
+  z-index: 20; // otherwise post labels layered above
 
   pointer-events: none; // allow clicking through offset
   & > menu { pointer-events: auto; }
